[gd_scene load_steps=17 format=3 uid="uid://b6jilagiy0cko"]

[ext_resource type="Script" path="res://scenes/characters/student/student_avatar.gd" id="1_1dwn7"]
[ext_resource type="PackedScene" uid="uid://cqqhk7ios8dcn" path="res://scenes/props/desk.tscn" id="2_gmhdo"]
[ext_resource type="Texture2D" uid="uid://cbbmsi15o8x4" path="res://icon.svg" id="3_ajofj"]
[ext_resource type="Texture2D" uid="uid://fd7xk3ma0eo5" path="res://assets/sprites/characters/Player_Female.png" id="3_wrgr4"]
[ext_resource type="Texture2D" uid="uid://bfpn3ryc6oiju" path="res://assets/sprites/heart.png" id="5_4o8nh"]
[ext_resource type="Texture2D" uid="uid://bdas85roqk6oh" path="res://assets/sprites/broken_heart.png" id="6_5fucj"]
[ext_resource type="Texture2D" uid="uid://c8rxd018feiuj" path="res://assets/sprites/player_icon.png" id="6_ro7ng"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y7n1q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rq2u2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p5400"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2yw7r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bf6qb"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="Theme" id="Theme_6abo4"]
Button/styles/disabled = SubResource("StyleBoxEmpty_y7n1q")
Button/styles/focus = SubResource("StyleBoxFlat_rq2u2")
Button/styles/hover = SubResource("StyleBoxEmpty_p5400")
Button/styles/normal = SubResource("StyleBoxEmpty_2yw7r")
Button/styles/pressed = SubResource("StyleBoxFlat_bf6qb")

[sub_resource type="Theme" id="Theme_visdg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl1il"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3te2g"]
size = Vector2(193, 192)

[node name="Friend" type="Button"]
custom_minimum_size = Vector2(200, 200)
offset_right = 200.0
offset_bottom = 200.0
theme = SubResource("Theme_6abo4")
script = ExtResource("1_1dwn7")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 200.0
offset_bottom = 201.0
mouse_filter = 1

[node name="Panel" type="Panel" parent="Control"]
clip_children = 1
clip_contents = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 1
theme = SubResource("Theme_visdg")
theme_override_styles/panel = SubResource("StyleBoxFlat_fl1il")

[node name="GridBG" type="ColorRect" parent="Control/Panel"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 203.0
offset_bottom = 203.0
mouse_filter = 2

[node name="Desk" parent="Control/Panel" instance=ExtResource("2_gmhdo")]
visible = false
layout_mode = 2
offset_left = -1.0
offset_top = 117.0
offset_right = 200.0
offset_bottom = 318.0
mouse_filter = 2

[node name="CharacterArt" type="TextureRect" parent="Control/Panel"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("3_wrgr4")

[node name="DebugCharacterArt" type="TextureRect" parent="Control/Panel"]
visible = false
layout_mode = 2
offset_left = 36.0
offset_top = 34.0
offset_right = 164.0
offset_bottom = 162.0
mouse_filter = 2
texture = ExtResource("3_ajofj")

[node name="DebugLabel" type="ColorRect" parent="Control/Panel"]
visible = false
layout_mode = 0
offset_left = 35.0
offset_top = 170.0
offset_right = 166.0
offset_bottom = 212.0
mouse_filter = 2

[node name="Label" type="Label" parent="Control/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0247512
anchor_right = 0.655
anchor_bottom = 0.223756
offset_left = 35.0
offset_top = 165.05
offset_right = 35.0
offset_bottom = 155.249
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Marker2D" type="Marker2D" parent="Control/Panel"]
position = Vector2(100, 100)

[node name="Heart" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_top = -15.0
offset_right = 15.0
grow_horizontal = 0
pivot_offset = Vector2(33.5, 29)
texture = ExtResource("5_4o8nh")

[node name="BrokenHeart" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_top = -15.0
offset_right = 15.0
grow_horizontal = 0
texture = ExtResource("6_5fucj")

[node name="PlayerIcon" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_top = -25.0
offset_right = 33.5
grow_horizontal = 2
texture = ExtResource("6_ro7ng")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(100.5, 100)
shape = SubResource("RectangleShape2D_3te2g")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
